# ml_template

./: README.md  pyproject.toml  requirements.txt  run.sh  setup.cfg
project_name/: logger.py  main.py  utils.py
project_name/checkpoint/: model-name10.pth  model-name20.pth
project_name/conf/: config.yaml  dirs.yaml  train.yaml
project_name/model/: data_loader.py  dataloader.py  net.py
project_name/utils/: helpers.py  io.py  nn.py  utility.py
project_name/utils/helpers/: __init__.py  helpers.py
project_name/utils/io/: __init__.py
project_name/utils/nn/: __init__.py  nn.py
project_name/utils/vision/: __init__.py
