[metadata]
name = project_name
version = attr: project_name.0.0.1
author = Mohammad Nazeri
author_email = mnazerir@gmu.edu
description = Project name, a one sentence description.
long_description = file: README.md
keywords = ml, dl
license = MIT
classifiers =
    Programming Language :: Python :: 3

[options]
zip_safe = False
include_package_data = True
package_dir=
    =project_name
packages = find:
python_requires = >=3.10
install_requires =
    requests
    importlib-metadata; python_version<"3.10"

[options.packages.find]
where=project_name

[options.packages.find]
exclude =
    examples*
    tools*
    docs*
    my_package.tests*
